Adding Creating categories with attribute definitions rest api
