# src/main/java/com/labfarward/programmingtest/controller/ItemCategoryController.java
@@ -3,27 +3,23 @@ package com.labfarward.programmingtest.controller;
 import com.labfarward.programmingtest.controller.spec.CategoriesApi;
 import com.labfarward.programmingtest.dto.spec.CategoryRequestDto;
 import com.labfarward.programmingtest.dto.spec.CategoryResponseDto;
+import com.labfarward.programmingtest.facade.ItemCategoryFacade;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
 
 @RestController
-public class CategoryItemController implements CategoriesApi {
+@RequiredArgsConstructor
+public class ItemCategoryController implements CategoriesApi {
 
-    @Override
-    public ResponseEntity<CategoryResponseDto> getAllCategories() {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<CategoryResponseDto> getCategory(Integer id) {
-        return null;
-    }
+    private final ItemCategoryFacade itemCategoryFacade;
 
     @Override
     public ResponseEntity<CategoryResponseDto> saveCategory(@Valid CategoryRequestDto categoryRequestDto) {
-
-        return null;
+        CategoryResponseDto categoryResponseDto = itemCategoryFacade.saveCategory(categoryRequestDto);
+        return new ResponseEntity<>(categoryResponseDto, HttpStatus.CREATED);
     }
 }
