# src/main/resources/api-swagger.yml
@@ -14,73 +14,12 @@ paths:
       summary: "Add new category"
       description: "Add new category of an item"
       operationId: "saveCategory"
-      tags:
-        - "labfarward"
       requestBody:
         required: true
         content:
           application/json:
             schema:
               $ref: "#/components/schemas/CategoryRequestDto"
-      responses:
-        200:
-          description: "Success"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CategoryResponseDto"
-        400:
-          description: "Bad Request"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponseDto"
-        500:
-          description: "Unknown error"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponseDto"
-
-    get:
-      summary: "Get list of categories"
-      description: "Get the list of categories"
-      operationId: "getAllCategories"
-      tags:
-        - "labfarward"
-      responses:
-        200:
-          description: "Success"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CategoryResponseDto"
-        400:
-          description: "Bad Request"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponseDto"
-        500:
-          description: "Unknown error"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponseDto"
-
-  "/categories/{id}":
-    post:
-      summary: "Get a single category"
-      description: "Get a single category"
-      operationId: "getCategory"
-      tags:
-        - "labfarward"
-      parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "integer"
       responses:
         200:
           description: "Success"
@@ -141,11 +80,6 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/AttributeDefinitionResponseDto"
-        createdAt:
-          type: string
-          format: date
-        createdBy:
-          type: "string"
 
     AttributeDefinitionRequestDto:
       type: "object"
@@ -153,6 +87,8 @@ components:
         name:
           type: "string"
         description:
+          type: "string"
+        type:
           type: "string"
 
     AttributeDefinitionResponseDto:
@@ -162,13 +98,9 @@ components:
           type: "string"
         description:
           type: "string"
+        type:
+          type: "string"
         active:
           type: "boolean"
         deleted:
           type: "boolean"
-        createdAt:
-          type: string
-          format: date
-        createdBy:
-          type: "string"
-
